--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ body {
 .hockey_board {
     height: auto;
     width: 200px;
-    border-radius: 10px;
+    margin-top: -40px;
 }
 
 .learn_more_direct {
